<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#ff7f22"
    android:id="@+id/idtemp">

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:id="@+id/username_text"
        android:layout_above="@+id/password_text"
        android:layout_centerHorizontal="true"
        android:hint="Email Address"
        android:lines="1"
        android:singleLine="true"
        android:maxLines="1" />

    <EditText
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/password_text"
        android:hint="Password"
        android:lines="1"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:maxLines="1" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Login"
        android:id="@+id/button_login"
        android:layout_below="@+id/password_text"
        android:layout_alignLeft="@+id/password_text"
        android:layout_alignStart="@+id/password_text"
       />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="Register"
        android:id="@+id/button_register"
        android:layout_alignRight="@+id/password_text"
        android:layout_alignEnd="@+id/password_text"
        android:layout_alignBottom="@+id/button_login"
        android:layout_below="@+id/password_text" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="Forgot Password?"
        android:id="@+id/reset_link"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/button_login"
        android:layout_alignRight="@+id/button_register"
        android:layout_alignEnd="@+id/button_register" />

    <ImageView
        android:layout_width="111dp"
        android:layout_height="111dp"
        android:id="@+id/imageView"
        android:src="@mipmap/ic_launcher"
        android:layout_above="@+id/username_text"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="Mooove It"
        android:id="@+id/textView3"
        android:textColor="@color/primary_material_light"
        android:layout_alignBottom="@+id/imageView"
        android:layout_alignLeft="@+id/reset_link"
        android:layout_alignStart="@+id/reset_link" />

</RelativeLayout>
