<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.jason.mooo.template_pages"
    android:background="#ff7f22">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout6">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="UserName"
            android:id="@+id/text_username"
            android:layout_gravity="left|center_vertical"
            android:textStyle="bold" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Profile"
            android:id="@+id/button_profile"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/frameLayout7">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="LiveStock"
            android:id="@+id/button_addlivestock_bottom_livestock"
            android:layout_gravity="left|center_vertical" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Home"
            android:id="@+id/button_addlivestock_bottom_home"
            android:layout_gravity="center" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medicine"
            android:id="@+id/button_addlivestock_bottom_chemical"
            android:layout_gravity="right|center_vertical" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/frameLayout6"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/frameLayout7"
        >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:text="New Livestock"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="50dp"
            android:textSize="35dp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="217dp"
            android:layout_height="wrap_content"
            android:id="@+id/idText"
            android:layout_gravity="left|top"
            android:layout_marginTop="220dp"
            android:maxLines="1"
            android:singleLine="true" />

        <Button
            android:layout_width="121dp"
            android:layout_height="70dp"
            android:text="Scan For ID"
            android:id="@+id/button_scan_for_id"
            android:layout_gravity="right|top"
            android:layout_marginTop="200dp" />

        <Button
            android:layout_width="182dp"
            android:layout_height="63dp"
            android:text="Add Livestock"
            android:id="@+id/addCow"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="100dp" />

    </FrameLayout>
</RelativeLayout>
