...
            android:layout_marginBottom="100dp" />

        <Button
            android:layout_width="fill_parent"
            android:layout_height="70dp"
            android:text="Logout"
            android:id="@+id/button_logout"
            android:layout_gravity="center"
            android:layout_marginTop="100dp" />
    </FrameLayout>
</RelativeLayout>

