...
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <ListView
            android:layout_width="fill_parent"
            android:layout_height="320dp"
            android:id="@+id/cowList"
            android:layout_gravity="center_horizontal|top"
            android:layout_marginTop="45dp"
            android:background="#ff7f22"
            android:choiceMode="singleChoice"
            android:clickable="true"
            android:fastScrollEnabled="false"
...
            android:layout_marginTop="180dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add"
            android:id="@+id/button_add_livestock"
            android:layout_gravity="right|top" />

    </FrameLayout>

</RelativeLayout>

