<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/confirm"
        android:title="Confirm"
        />
    <item
        android:id="@+id/cancel"
        android:title="Cancel"
        />
</menu>